# open-python-skills

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml  repo_architecture.excalidraw  setup.py
.agent/: AGENTS.md
.claude/: commands.md  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.cursor/commands/: commit-batch.md  excalidraw.md  kb-search.md  open-python-skills.md
.github/copilot/: instructions.md
.kiro/: rules.md
.shared/commit-message/: SKILL.md
.shared/data/: api_patterns.json  fastapi_best_practices.json
.shared/excalidraw-ai/: SKILL.md
.shared/excalidraw-ai/data/: templates.json
.shared/excalidraw-ai/scripts/: analyze_python_project.py  (+1 more)
.shared/open-python-skills/: SKILL.md
.shared/scripts/: knowledge_db.py  search.py
.windsurf/: rules.md
open_python_skills/: __init__.py  cli.py
open_python_skills/api-testing/: SKILL.md
open_python_skills/data/: SKILL.md
open_python_skills/docker-builder/: SKILL.md
open_python_skills/error-handling/: SKILL.md
open_python_skills/excalidraw-ai/: SKILL.md
open_python_skills/formatting/: SKILL.md
open_python_skills/linting/: SKILL.md
open_python_skills/marimo-notebook/: SKILL.md
open_python_skills/observability/: SKILL.md
open_python_skills/pydantic/: SKILL.md
open_python_skills/python-backend/: SKILL.md
open_python_skills/unit-testing/: SKILL.md
open_python_skills/web-scraping/: SKILL.md
skills/docker-builder/: SKILL.md
skills/formatting/: SKILL.md
skills/marimo-notebook/: SKILL.md
skills/observability/: SKILL.md
skills/web-scraping/: SKILL.md
(+51 files in other folders)
